Fixed dark mode

--- a/assets/style/_colors.scss
+++ b/assets/style/_colors.scss
@@ -16,6 +16,8 @@ $red: #b37f7f;
 $tourqise: #a0ebe3;
 $brightGreen: #34a333;
 $skyebule: #CBF6FF;
+$darkModeBackground: #272834;
+$white: #FFFFFF;
 
 /*TODO
 potentially more/differnt colors*/
