--- a/assets/style/_layout.scss
+++ b/assets/style/_layout.scss
@@ -2,7 +2,6 @@
 
 body {
     width: 100%;
-    background-color: $tourqise;
     margin: 0%;
     padding: 0%;
 }
